Squashed commit of the following:
commit a4b0dd6c9be732af039a1ceb8657642add3d1df8
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Sun Jun 23 21:17:21 2024 -0700

    update `/fall2024-board-info` shortlink

commit 7165d978d6bac4176993d5039ecd6e05d4c76760
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Thu Jun 20 21:26:47 2024 -0700

    update `/supa-slides` shortlink

commit 763425dd38a163afe9e1a910957c0bfddaa807e9
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Thu Jun 13 19:59:17 2024 -0700

    update `/webdev-at-night` shortlink

commit b67180c9b58d45154e7a5a652f3d49026de53af1
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Thu Jun 13 19:59:06 2024 -0700

    update `/webdev-at-night` shortlink

commit 3bedf83c8275b277163df884c4e3a7339d368418
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Thu Jun 13 19:58:31 2024 -0700

    update `/webdev-at-night` shortlink

commit a2ae85a24c5cd5819df515ae38e3f51d32c384d9
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Wed Jun 12 10:58:29 2024 -0700

    Add Organization JSON-LD (#1091)

    * Update +page.svelte

    * personalize organization json ld content

    * Create robots.txt

    * Revert "Create robots.txt"

    This reverts commit 8707984eaf128588a586db17b9351913076e4cbd.

    * Reapply "Create robots.txt"

    This reverts commit 07ad13cc75e5cc0069943b5445bf2b3a55bb4bcd.

    * Update +page.svelte

commit a8f3d82c6a69e6a73536f0d4bc11232628341e92
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Thu Jun 6 19:32:11 2024 -0700

    update `/nextjs-portfolio-slides` shortlink

commit cd684c3c6c1536ccab284fd016fee871e5ec7558
Merge: 992171f 4dfe0cf
Author: Tomas Oh <112128328+tomasohCHOM@users.noreply.github.com>
Date:   Wed May 22 12:34:28 2024 -0700

    Merge pull request #108

--- a/static/global.css
+++ b/static/global.css
@@ -82,6 +82,7 @@
   --acm-odd: var(--perma-light);
   --acm-even: var(--acm-dew);
   --navbar-bg: var(--perma-light);
+  --navbar-mobile-sidebar-bg: var(--perma-light);
   --navbar-shadow: 0 0 50px 10px rgba(0, 0, 0, 0.25);
   --footer-bg: var(--acm-ocean);
   --button-bg: var(--acm-midnight);
@@ -215,7 +216,7 @@ body:has(nav > input[type='checkbox']:checked) {
   font-size: var(--size-xs);
 }
 
-.light {
+html[data-theme='light'] {
   --acm-dark: #101315;
   --acm-light: #f8f8f8;
   --acm-canvas: #eaeaea;
@@ -229,13 +230,14 @@ body:has(nav > input[type='checkbox']:checked) {
   --button-color: var(--perma-light);
 }
 
-.dark {
+html[data-theme='dark'] {
   --acm-dark: #f8f8f8;
   --acm-light: #101315;
   --acm-canvas: #161b22;
   --acm-odd: var(--acm-midnight);
   --acm-even: var(--acm-abyss);
   --navbar-bg: var(--acm-ocean);
+  --navbar-mobile-sidebar-bg: var(--acm-abyss);
   --navbar-shadow: 0 0 50px 10px rgba(0, 0, 0, 0.6);
   --footer-bg: var(--acm-midnight);
   --button-bg: var(--acm-blue);
@@ -244,13 +246,14 @@ body:has(nav > input[type='checkbox']:checked) {
 }
 
 @media (prefers-color-scheme: light) {
-  body:not(.dark) {
+  html:not([data-theme='dark']) {
     --acm-dark: #101315;
     --acm-light: #f8f8f8;
     --acm-canvas: #eaeaea;
     --acm-odd: var(--perma-light);
     --acm-even: var(--acm-dew);
     --navbar-bg: var(--perma-light);
+    --navbar-mobile-sidebar-bg: var(--perma-light);
     --navbar-shadow: 0 0 50px 10px rgba(0, 0, 0, 0.25);
     --footer-bg: var(--acm-ocean);
     --button-bg: var(--acm-midnight);
@@ -260,13 +263,14 @@ body:has(nav > input[type='checkbox']:checked) {
 }
 
 @media (prefers-color-scheme: dark) {
-  body:not(.light) {
+  html:not([data-theme='light']) {
     --acm-dark: #f8f8f8;
     --acm-light: #101315;
     --acm-canvas: #161b22;
     --acm-odd: var(--acm-midnight);
     --acm-even: var(--acm-abyss);
     --navbar-bg: var(--acm-ocean);
+    --navbar-mobile-sidebar-bg: var(--acm-abyss);
     --navbar-shadow: 0 0 50px 10px rgba(0, 0, 0, 0.6);
     --footer-bg: var(--acm-midnight);
     --button-bg: var(--acm-blue);
