--- a/src/routes/(site)/blog/[id]/syntax-highlight.css
+++ b/src/routes/(site)/blog/[id]/syntax-highlight.css
@@ -75,7 +75,7 @@
 }
 
 @media (prefers-color-scheme: light) {
-  body:not(.dark) {
+  html[data-theme='light'] {
     --color-prettylights-syntax-comment: #6a737d;
     --color-prettylights-syntax-constant: #005cc5;
     --color-prettylights-syntax-entity: #6f42c1;
@@ -111,7 +111,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  body:not(.light) {
+  html[data-theme='dark'] {
     --color-prettylights-syntax-comment: #8b949e;
     --color-prettylights-syntax-constant: #79c0ff;
     --color-prettylights-syntax-entity: #d2a8ff;
