--- a/static/global.css
+++ b/static/global.css
@@ -278,3 +278,7 @@ html[data-theme='dark'] {
     --button-color: var(--perma-light);
   }
 }
+
+main {
+  background-color: var(--acm-even) !important;
+}
